--- a/styles/about-me.css
+++ b/styles/about-me.css
@@ -6,7 +6,6 @@
 #main-content-container{
     display: flex;
     justify-content: center;
-
     flex: 1;
 }
 
@@ -14,12 +13,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 1400px;
+    width: 600px;
     padding: 20px;
+    row-gap: 20px;
 }
 
 #personal-photo{
     width: var(--personal-photo-size);
     height: var(--personal-photo-size);
     border-radius: var(--personal-photo-radius);
+}
+
+#about-me-body{
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+}
+
+#highlight{
+    color: var(--heading-text-color);
 }
